// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container Given children When rendering Then match snapshot 1`] = `
<div
  className="sc-bczRLJ eGDUch"
>
  <span>
    Children
  </span>
</div>
`;

exports[`Container Given no children When rendering Then match snapshot 1`] = `
<div
  className="sc-bczRLJ eGDUch"
/>
`;
